@@ -1,3 +1,7 @@
+2011-01-05  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-lto-mixed-3.patch: Update PRs.
+
 2011-01-01  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-signed-6.patch: New file. Replace ...
